--- a/1-3_Jupyter_basics.ipynb
+++ b/1-3_Jupyter_basics.ipynb
@@ -738,7 +738,8 @@
    },
    "outputs": [],
    "source": [
-    "# this is a comment and is not run"
+    "# this is a comment and is not run\n",
+    "# command + / is how you get the #"
    ]
   },
   {
