--- a/2-1_Basic_Data_Types.ipynb
+++ b/2-1_Basic_Data_Types.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -59,21 +59,21 @@
     {
      "data": {
       "text/plain": [
-       "str"
+       "int"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(\"2\")"
+    "type(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -87,7 +87,7 @@
        "int"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -881,18 +881,19 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "81"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "81\n",
+      "81.0\n"
+     ]
     }
    ],
    "source": [
-    "9 ** 2 # power operator. Can result in float or int depending on input."
+    "a = 9 ** 2 # power operator. Can result in float or int depending on input.\n",
+    "b = 9.0 ** 2 # this gives float so the power operator can result in an integer or float\n",
+    "print(a)\n",
+    "print(b)"
    ]
   },
   {
@@ -1149,7 +1150,7 @@
     }
    ],
    "source": [
-    "math.exp(2)"
+    "math.exp(2) # this is e^2"
    ]
   },
   {
@@ -1174,6 +1175,72 @@
    ],
    "source": [
     "math.sin(math.pi / 2) # the math.sin function uses radians"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.sin(math.pi / 2) # the math.sin function uses radians"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5707963267948966"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "math.radians(90) #degree value into radians"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "math.sin(math.radians(90))"
    ]
   },
   {
@@ -1245,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1260,15 +1327,16 @@
      "evalue": "name 'TRUE' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[43], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mtype\u001b[39m(TRUE)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'TRUE' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mtype\u001b[39m(TRUE) \u001b[38;5;66;03m# TRUE or T or t or true\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'TRUE' is not defined"
      ]
     }
    ],
    "source": [
-    "type(TRUE) # TRUE or T or t or true"
+    "type(TRUE) # TRUE or T or t or true\n",
+    "type(True)"
    ]
   },
   {
@@ -1499,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1743,6 +1811,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruitQtys = [13, 45, 90]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -1785,6 +1862,16 @@
     "isSelected = True\n",
     "canWrite = True\n",
     "hasFruit = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(isSelected):\n",
+    "    print(\"this is the one selected\")"
    ]
   },
   {
@@ -1910,7 +1997,7 @@
    ],
    "source": [
     "carBrandNames = ['Chevrolet', 'Audi', 'Honda']\n",
-    "sorted(carBrandNames) # returns the sorted list, but does not modify the list"
+    "sorted(carBrandNames) # returns the sorted list, but does not modify the original list"
    ]
   },
   {
