--- a/3-1_Lists_and_strings.ipynb
+++ b/3-1_Lists_and_strings.ipynb
@@ -541,7 +541,9 @@
    "source": [
     "import copy\n",
     "d = c[:]  # d is a shallow copy of c\n",
-    "e = copy.deepcopy(c)  # e is a deep copy of c"
+    "e = copy.deepcopy(c)  # e is a deep copy of c\n",
+    "# since c is a concatination to a and b, shallow copy and deep copy won't be affected with the append method\n",
+    "# changing the original copy will affected the concatinated and shawllo copy but will not affect the deep copy"
    ]
   },
   {
@@ -687,7 +689,8 @@
    ],
    "source": [
     "fam = [\"liz\", 1.73, \"emma\", 1.68, \"mom\", 1.71, \"dad\", 1.89]\n",
-    "fam.insert(4, \"joe\") # inserts joe at the location of the 4th comma between 1.68 and mom\n",
+    "fam.insert(4, \"joe\") # inserts joe at the location of the 4th comma between 1.68 and mom \n",
+    "# inserts at 4th element\n",
     "print(fam)"
    ]
   },
@@ -1234,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1248,7 +1251,7 @@
        "[2, 2, 3, 4, 5.1, 7, 9]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1274,13 +1277,33 @@
        "[4, 2, 7, 9, 2, 5.1, 3]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "some_digits  # the list is unaffected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(some_digits)"
    ]
   },
   {
@@ -2598,7 +2621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
